--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <h1 id="level-title">Press a Key to Start</h1>
+  <h1 id="mobile-instructions" class="mobile">Press Play to Begin</h1>
   <h3 ></h3>
   <h2 id="score"></h2>
   <div class="container">
@@ -33,9 +34,12 @@
       <div type="button" id="blue" class="btn blue">
 
       </div>
-
     </div>
-
+  </div>
+  <div id="play-btn" class="mobile">
+    <h4>
+      PLAY
+    </h4>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
